# snapshot-cpp

./: BUILD.bazel  CMakeLists.txt  Makefile  README.md  gcovr.sh
.github/workflows/: clang_format.yml  release.yml  test.yml
include/snapshot/: snapshot.h
include/snapshot/internal/: file_utility.h  string_utility.h  system_utility.h  utility.h
include/snapshot/types_check/: has_class_internal_to_string.h  has_global_to_string.h  has_operator_stream.h  has_std_to_string.h
test/: CMakeLists.txt  example_test.cc  file_utility_test.cc  hello_world_benchmark.cc  hello_world_test.cc  snapshot_benchmark.cc  snapshot_test.cc  string_utility_test.cc  system_utility_test.cc  utility_test.cc
test/internal/: string_utility_test.cc  system_utility_test.cc  utility_test.cc
